<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/app_name"
            android:textSize="40sp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/tracker_covid19_application"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/poppins_light"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            app:cardElevation="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="16dp"
                    android:text="@string/global_data"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="3"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/confirmed"
                                android:textColor="@color/colorWhite"
                                android:fontFamily="@font/poppins_light"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <cz.ursiny.countertextview.library.CounterTextView
                                android:text="@string/_0"
                                android:id="@+id/globalConfirmed"
                                app:numberFormat="true"
                                app:speed="80"
                                android:textSize="20sp"
                                android:textColor="@color/colorAccent"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/death"
                                android:textColor="@color/colorWhite"
                                android:fontFamily="@font/poppins_light"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <cz.ursiny.countertextview.library.CounterTextView
                                android:text="@string/_0"
                                android:id="@+id/globalDeath"
                                app:numberFormat="true"
                                app:speed="80"
                                android:textSize="20sp"
                                android:textColor="@color/colorRed"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/recovered"
                                android:textColor="@color/colorWhite"
                                android:fontFamily="@font/poppins_light"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <cz.ursiny.countertextview.library.CounterTextView
                                android:text="@string/_0"
                                android:id="@+id/globalRecovered"
                                app:numberFormat="true"
                                app:speed="80"
                                android:textSize="20sp"
                                android:textColor="@color/colorGreen"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </FrameLayout>
                </GridLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:text="@string/search_country"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerSummaryCountry"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/placeholder_text_item"
                android:layout_width="150dp"
                android:layout_height="20dp"/>
            <View
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/placeholder_text_item"
                android:layout_width="150dp"
                android:layout_height="20dp"/>
            <View
                android:layout_marginStart="16dp"
                android:background="@drawable/placeholder_text_item"
                android:layout_width="150dp"
                android:layout_height="20dp"/>
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSummaryCountry"
        tools:listitem="@layout/item_summary_country"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>