<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="4dp"
    android:layout_marginRight="8dp"
    android:paddingBottom="4dp"
    android:layout_width="370dp"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="start"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/ic_history_white_24dp"
                    android:tint="@color/colorAccent"
                    android:layout_width="20dp"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:layout_height="20dp"/>
                <TextView
                    android:id="@+id/dayOneDate"
                    tools:text="2020-05-27"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="3"
                android:orientation="horizontal">
                <FrameLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/confirmed"
                            android:textColor="@color/colorWhite"
                            android:fontFamily="@font/poppins_light"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <cz.ursiny.countertextview.library.CounterTextView
                            android:text="@string/_0"
                            android:id="@+id/dayOneConfirmed"
                            app:numberFormat="true"
                            app:speed="80"
                            android:textSize="20sp"
                            android:textColor="@color/colorAccent"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/death"
                            android:textColor="@color/colorWhite"
                            android:fontFamily="@font/poppins_light"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <cz.ursiny.countertextview.library.CounterTextView
                            android:text="@string/_0"
                            android:id="@+id/dayOneDeath"
                            app:numberFormat="true"
                            app:speed="80"
                            android:textSize="20sp"
                            android:textColor="@color/colorRed"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
                <FrameLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:text="@string/recovered"
                            android:textColor="@color/colorWhite"
                            android:fontFamily="@font/poppins_light"
                            android:textSize="18sp"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <cz.ursiny.countertextview.library.CounterTextView
                            android:text="@string/_0"
                            android:id="@+id/dayOneRecovered"
                            app:numberFormat="true"
                            app:speed="80"
                            android:textSize="20sp"
                            android:textColor="@color/colorGreen"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:textAlignment="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </FrameLayout>
            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>