<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetailCountryActivity">
    <LinearLayout
        android:id="@+id/intentBackFromDetailSummary"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:layout_width="27dp"
            android:layout_height="27dp"/>
        <TextView
            android:text="@string/back"
            android:fontFamily="@font/poppins_regular"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/countryNameHeader"
                    tools:text="Indonesia"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <GridLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="3"
                    android:orientation="horizontal">
                    <FrameLayout
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/confirmed"
                                android:textColor="@color/colorWhite"
                                android:fontFamily="@font/poppins_light"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <cz.ursiny.countertextview.library.CounterTextView
                                android:text="@string/_0"
                                android:id="@+id/countryConfirmed"
                                app:numberFormat="true"
                                app:speed="80"
                                android:textSize="20sp"
                                android:textColor="@color/colorAccent"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/death"
                                android:textColor="@color/colorWhite"
                                android:fontFamily="@font/poppins_light"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <cz.ursiny.countertextview.library.CounterTextView
                                android:text="@string/_0"
                                android:id="@+id/countryDeath"
                                app:numberFormat="true"
                                app:speed="80"
                                android:textSize="20sp"
                                android:textColor="@color/colorRed"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </FrameLayout>
                    <FrameLayout
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:text="@string/recovered"
                                android:textColor="@color/colorWhite"
                                android:fontFamily="@font/poppins_light"
                                android:textSize="18sp"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                            <cz.ursiny.countertextview.library.CounterTextView
                                android:text="@string/_0"
                                android:id="@+id/countryRecovered"
                                app:numberFormat="true"
                                app:speed="80"
                                android:textSize="20sp"
                                android:textColor="@color/colorGreen"
                                android:fontFamily="@font/poppins_semi_bold"
                                android:textAlignment="center"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>
                        </LinearLayout>
                    </FrameLayout>
                </GridLayout>
                <View
                    android:alpha="0.4"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:src="@drawable/ic_history_white_24dp"
                        android:tint="@color/colorAccent"
                        android:layout_width="20dp"
                        android:layout_marginEnd="8dp"
                        android:layout_gravity="center"
                        android:layout_height="20dp"/>
                    <TextView
                        android:id="@+id/countryDateHeader"
                        tools:text="2020-05-27"
                        android:textColor="@color/colorAccent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:text="@string/data_per_day"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.facebook.shimmer.ShimmerFrameLayout
            android:visibility="gone"
            android:id="@+id/shimmerDayOneStats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:background="@drawable/placeholder_text_item"
                        android:layout_width="150dp"
                        android:layout_height="20dp"/>
                    <View
                        android:background="@drawable/placeholder_text_item"
                        android:layout_marginTop="16dp"
                        android:layout_width="50dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
                <LinearLayout
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <View
                        android:background="@drawable/placeholder_text_item"
                        android:layout_width="150dp"
                        android:layout_height="20dp"/>
                    <View
                        android:background="@drawable/placeholder_text_item"
                        android:layout_marginTop="16dp"
                        android:layout_width="50dp"
                        android:layout_height="20dp"/>
                </LinearLayout>
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDayOneStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>